--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/user_api?createDatabaseIfNotExist=true
+spring.datasource.username=bestuser
+spring.datasource.password=bestuser
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
+
+spring.freemarker.expose-request-attributes=true
